--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "pug": "^2.0.0-rc.3"
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
+    "pug": "^2.0.0-rc.3",
+    "sequelize": "^4.39.0",
+    "sequelize-cli": "^4.1.1"
   }
 }
