--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@google-cloud/storage": "^1.6.0",
     "angular-classy": "^1.2.4",
     "body-parser": "^1.17.2",
+    "csvtojson": "^2.0.8",
     "express": "^4.15.3",
     "express-session": "^1.15.5",
+    "formidable": "^1.2.1",
     "gulp-jshint": "^2.0.4",
     "mongoose": "^4.11.5",
     "passport": "^0.3.2",
