--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.15.5",
     "formidable": "^1.2.1",
     "gulp-jshint": "^2.0.4",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongoose": "^4.11.5",
     "passport": "^0.3.2",
