--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "pug": "^2.0.0-rc.3",
     "sequelize": "^4.39.0",
     "sequelize-cli": "^4.1.1",
+    "shortid": "^2.2.14",
+    "uuid": "^3.3.2",
     "vasync": "^2.2.0"
   }
 }
